debug and release added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,22 +3,62 @@ project(HttpClient LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+
+add_compile_options(
+    -Wall
+    -Wextra
+    -Wpedantic
+    -Wshadow
+    -Wconversion
+    -fdiagnostics-color=always
+)
+
 if(CMAKE_BUILD_TYPE STREQUAL "Release")
   message(STATUS "Applying secure Release flags")
 
   # Compiler optimization and hardening flags
   set(CMAKE_CXX_FLAGS_RELEASE
-        "-O3 -march=native -flto -DNDEBUG -fstack-protector-strong -D_FORTIFY_SOURCE=2"
-        CACHE STRING "Release compiler flags" FORCE
-    )
+    "-O3 -march=native -flto=auto -DNDEBUG \
+     -fstack-protector-strong -D_FORTIFY_SOURCE=2 \
+     -fno-omit-frame-pointer -fno-common"
+    CACHE STRING "Release compiler flags" FORCE)
 
-  # Linker flags (for glibc security)
-  #set(CMAKE_EXE_LINKER_FLAGS_RELEASE
-  #       "-Wl,-z,relro,-z,now"
-  #       CACHE STRING "Release linker flags" FORCE
-  # )
+  set(CMAKE_EXE_LINKER_FLAGS_RELEASE
+    "-flto=auto -Wl,-z,relro,-z,now"
+    CACHE STRING "Release linker flags" FORCE)
+
+
+  message(STATUS "CMAKE_CXX_FLAGS_RELEASE: ${CMAKE_CXX_FLAGS_RELEASE}")
+  message(STATUS "CMAKE_EXE_LINKER_FLAGS_RELEASE: ${CMAKE_EXE_LINKER_FLAGS_RELEASE}")
+
+
+
 endif()
-message(STATUS "CXX FLAGS: ${CMAKE_CXX_FLAGS_RELEASE}")
+
+
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+  message(STATUS "Applying debug development flags")
+
+  set(CMAKE_CXX_FLAGS_DEBUG
+      "-O0 -g3 -Wall -Wextra -Wpedantic -Wshadow -Wconversion -fsanitize=address,undefined -fno-omit-frame-pointer"
+      CACHE STRING "Debug compiler flags" FORCE)
+
+  set(CMAKE_EXE_LINKER_FLAGS_DEBUG
+      "-fsanitize=address,undefined"
+      CACHE STRING "Debug linker flags" FORCE)
+
+
+
+  message(STATUS "CMAKE_CXX_FLAGS_DEBUG: ${CMAKE_CXX_FLAGS_DEBUG}")
+  message(STATUS "CMAKE_EXE_LINKER_FLAGS_DEBUG: ${CMAKE_EXE_LINKER_FLAGS_DEBUG}")
+
+
+endif()
+
+set(CMAKE_CXX_FLAGS_RELWITHDEBINFO
+    "-O2 -g -march=native -DNDEBUG -fstack-protector-strong -fno-omit-frame-pointer"
+    CACHE STRING "RelWithDebInfo flags" FORCE)
 
 option(ENABLE_COVERAGE "Enable coverage reporting" OFF)
 
